--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aakash_portfolio",
+  "name": "citi_portfolio",
   "homepage": "https://aakashsh1999.github.io/",
   "version": "0.1.0",
   "private": true,
